# ctrld-sync

./: .codacy.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PERFORMANCE.md  README.md  SECURITY.md  WARP.md  api_client.py  benchmark_retry_jitter.py  cache.py  config.py  config.yaml.example  conftest.py  docker-compose.yml  docker-setup.sh  extract_hint.py  fix_ci.py  fix_env.py  handoff.md  lefthook.yml  log.txt  main.py  patch.yml  patch2.yml  payload.json  plan.json  pr_body.json  pr_description.md  pr_payload.json  pyproject.toml  pytest.ini  reproduce_issue.py  requirements-dev.txt  requirements.txt  run-tests.sh  (+8 more)
.Jules/: palette.md
.devcontainer/: devcontainer.json
.github/: .github_changelog_generator.yml  PULL_REQUEST_TEMPLATE.md  labeler.yml  repository-automation.md  repository-automation.yml
.github/aw/: actions-lock.json
.github/scripts/: repository_automation.py  repository_automation_common.py  repository_automation_tasks.py
.github/workflows/: agentics-maintenance.yml  audit-workflows.lock.yml  audit-workflows.md  bandit.yml  ci.yml  codacy.yml  codeql.yml  (+27 more)
.jules/: bolt.md  palette.md  sentinel.md
.trunk/: trunk.yaml
cache/: benchmark-data.json
tasks/: lessons.md  pr-inventory.md  pr-review-2026-02-26.md  pr-triage.md  qa_notes.md
tests/: benchmark_client_reuse.py  test_alert_system_async.py  test_api_client.py  test_api_tracking.py  test_benchmarks.py  test_bootstrapping.py  test_cache_optimization.py  test_clean_env_kv.py  test_config.py  test_content_type.py  test_csv_injection.py  test_dataclasses.py  test_disk_cache.py  test_env_permissions.py  test_exception_logging.py  test_fix_broken_validation.py  test_fix_env.py  test_folder_id_validation.py  test_folder_validation.py  test_format_duration.py  test_hostname_validation.py  test_id_validation.py  test_json_logging.py  test_log_sanitization.py  test_palette_ux.py  test_parallel_delete.py  test_parallel_deletion.py  test_parallel_fetch.py  test_performance.py  test_performance_regression.py  test_permissions.py  test_plan_details.py  test_push_rules_perf.py  test_rate_limit.py  test_retry_jitter.py  test_rule_validation.py  test_sanitize_perf.py  test_security.py  test_security_hardening.py  test_security_limits.py  (+12 more)
(+28 files in other folders)
