[project]
name = "ctrld-sync"
version = "0.1.0"
description = "Simple script which syncs defined Control D folders"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "test_main.py", ".venv/*", ".venv/**"]

[tool.coverage.report]
show_missing = true
fail_under = 55
